ok button done, working js

--- a/chat.html
+++ b/chat.html
@@ -38,12 +38,12 @@
 		
 		<!-- main messages -->
 		<div id="jqm-header" data-role="header" data-position="fixed">
-			<h1 id="name">Mom</h1>
+			<h1 id="name" class="name-other">Mom</h1>
 			<a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
 		<div id="content" data-role="content">
-        	<!-- <div class="message-rows">
-        		<div class="row received">
+        	<div class="message-rows">
+        		<!-- <div class="row received">
         			<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Ok can't wait to see you home! :)</div>
@@ -52,8 +52,8 @@
     				<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Did you get home safely? Reply back soon okay?</div>
-    			</div>
-        	</div> -->
+    			</div> -->
+        	</div>
 		</div>
 		<div id="jqm-footer" data-role="footer" data-position="fixed" class="actions">
 			<a href="#" class="footer-btn" data-role="button" data-iconpos="notext" data-theme="a" id="share"></a>
