--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app" id="messages">
 		<div id="jqm-header" data-role="header" data-position="fixed">
-			<h1 id="name" class="name-other">FamilyHub</h1>
+			<h1 id="name">FamilyHub</h1>
 		</div>
 		<div class="profile">
 			<div class="self-info">
