--- a/chat.html
+++ b/chat.html
@@ -39,7 +39,7 @@
 		<!-- main messages -->
 		<div id="jqm-header" data-role="header" data-position="fixed">
 			<span id="home" href="index.html" rel="external">Home</span>
-			<h1 id="name">Mom</h1>
+			<h1 id="name" class="name-other">Mom</h1>
 			<!-- <a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a> -->
 			<span id="options">Options</span>
 		</div>
