finished schedule call

--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="js/schedule.js"></script>
 </head>
 <body>
-	<div data-role="page" data-add-back-btn="true" class="app" id="messages">
+	<div data-role="page" class="app" id="messages">
 		
 		<!-- right panel -->
 		<div data-role="panel" id="options-panel" data-position="right" data-display="reveal" data-dismissible="true">
@@ -25,7 +25,7 @@
 			<div class="status busy">Busy: In Class</div>
 			<div class="free-at">Free at 5:30pm</div>
 			<div class="request-actions">
-				<a href="#" class="panel-btn-full" data-role="button" data-theme="a" id="call-now">Call Now</a>
+				<a href="notify-call.html" rel="external" class="panel-btn-full" data-role="button" data-theme="a" id="call-now">Call Now</a>
 				<a href="#" class="panel-btn-full" data-role="button" data-theme="a" id="request-call">Request Call</a>
 				<a href="#" class="panel-btn-full" data-role="button" data-theme="a" id="request-photo">Request Photo</a>
 			</div>
