--- a/notify-call.html
+++ b/notify-call.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/notify.css">
 </head>
-<body>
-	<div class="time">02:00</div>
+<body id="lockscreen">
+	<div class="time">1:59</div>
+	<div class="date">Wednesday 11 December</div>
 	<div class="notifications">
 		<div class="notification">
 			<div class="face child"></div>
