--- a/notify-ok.html
+++ b/notify-ok.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/notify.css">
 </head>
-<body>
-	<div class="time">07:32</div>
+<body id="lockscreen">
+	<div class="time">10:40</div>
+	<div class="date">Wednesday 11 December</div>
 	<div class="notifications">
 		<a href="chat.html" rel="external">
 			<div class="notification">
