--- a/stitches.html
+++ b/stitches.html
@@ -329,6 +329,14 @@
                         <h3>Dad</h3>
                     </div>
                 </div>
+                <div class="row family" id="border">
+                    <div class="col-xs-3">
+                        <img src="images/doge.jpg" height="75px" width="75px" class="img-circle">
+                    </div>
+                    <div class="col-xs-9">
+                        <h3>Dog</h3>
+                    </div>
+                </div>
                 </div>
             </div>
         
